<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_bg__signinactivity_ek2_shape"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/sign_into_your_account"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_marginTop="108dp"
        android:text="@string/sign_into_your_account_string"
        android:textColor="@color/sign_up_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/email_box"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/email_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="76dp"
        android:background="@null"
        android:hint="@string/email_address_string"
        android:textColor="@color/password_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/password_box"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/email_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="76dp"
        android:background="@null"
        android:hint="@string/password_string"
        android:textColor="@color/password_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/email_vector"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="204dp"
        android:contentDescription="email_vector"
        android:src="@drawable/email_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/password_vector"
        android:layout_width="36dp"
        android:layout_height="29dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="268dp"
        android:contentDescription="email_vector"
        android:src="@drawable/password_vector2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_in_button"
        android:layout_width="243dp"
        android:layout_height="35dp"
        android:layout_marginTop="112dp"
        android:contentDescription="sign_in_button"
        android:src="@drawable/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="70dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_string"
        android:textColor="@color/sign_in_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/sign_in_button" />

    <View
        android:id="@+id/line2"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:layout_marginTop="504dp"
        android:background="@drawable/line2_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/or_sign_in_with"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/or_sign_in_with"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginBottom="332dp"
        android:text="@string/or_sign_in_with_string"
        android:textColor="@color/sign_up_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.897" />

    <View
        android:id="@+id/line1"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:layout_marginTop="504dp"
        android:background="@drawable/line1_shape"
        app:layout_constraintEnd_toStartOf="@+id/or_sign_in_with"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:contentDescription="gradient"
        android:src="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>